--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: colors
+name: colors_terminal
 description: A starting point for Dart libraries or applications.
-# version: 1.0.0
-# homepage: https://www.example.com
+version: 1.0.0
+homepage: https://github.com/crewdevio/colors
 
 environment:
   sdk: '>=2.8.1 <3.0.0'
